gaphor: cleaned up

--- a/python-pypi/gaphor/HISTORY
+++ b/python-pypi/gaphor/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, BUILD, DETAILS: cleaned up
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
@@ -16,4 +19,3 @@
 
 2004-04-19 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* BUILD, DEPENDS, DETAILS, HISTORY: created this spell
-
