initools: cleaned up, added missed deps

--- a/python-pypi/initools/HISTORY
+++ b/python-pypi/initools/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added python as a req dep
+	* DETAILS: cleaned up
+
 2007-01-25 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: updated spell to 0.2
 
