--- a/python-pypi/ipython/HISTORY
+++ b/python-pypi/ipython/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated to 0.8.2, cleaned up
+
 2007-11-03 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 0.8.1
 	  fixed long description wrap
