--- a/python-pypi/itools/HISTORY
+++ b/python-pypi/itools/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: cleaned up, fixed WEB_SITE
+
 2008-01-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.20.2
 
@@ -103,4 +107,3 @@
 	* DETAILS: version 0.12.0
 	* BUILD, DEPENDS: added
 	  spell created
-
