--- a/python-pypi/json-py/HISTORY
+++ b/python-pypi/json-py/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added python as a req dep
+	* DETAILS: cleaned up
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
