kaa-base: cleaned up

--- a/python-pypi/kaa-base/HISTORY
+++ b/python-pypi/kaa-base/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up, fixed url
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.0
 
@@ -10,4 +13,3 @@
 2007-02-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.1.2
 	  spell created
-
