--- a/python-pypi/kid/HISTORY
+++ b/python-pypi/kid/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: removed celementtree (it's now a part of python (since >=2.5)
+	* DETAILS: cleaned up, fixed WEB_SITE and SOURCE_URL
+
 2007-07-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: remove elementtree, now part of python
 
