--- a/python-pypi/luca/HISTORY
+++ b/python-pypi/luca/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up
+
 2007-07-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.02
 
