m2crypto: cleaned up

--- a/python-pypi/m2crypto/HISTORY
+++ b/python-pypi/m2crypto/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up
+	* BUILD: useless, due to the new build system of section
+
 2007-10-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.18.2
 
@@ -22,4 +26,3 @@
 
 2005-01-18 Unet <unet@sourcemage.org>
 	* BUILD, DEPENDS, DETAILS: Spell created
-
