matplotlib: => 0.91.2, added missing deps

--- a/python-pypi/matplotlib/HISTORY
+++ b/python-pypi/matplotlib/HISTORY
@@ -1,3 +1,8 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 0.91.2, removed UPDATED, cleaned up
+	* BUILD: useless
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.91.1
 
