--- a/python-pypi/mechanize/HISTORY
+++ b/python-pypi/mechanize/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: removed clientcookie, pullparser (they are part of this now)
+	* DETAILS: updated to 0.1.7b, removed UPDATED
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
