--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,8 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up
+	* INSTALL: use default_install_python function due to the new
+	  build system in section
+
 2007-10-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 0.9.5
 
@@ -52,4 +57,3 @@
 
 2005-08-20 Andrew Stitt <astitt@sourcemage.org>
 	* DETAILS, DEPENDS, BUILD, INSTALL, TRIGGERS, HISTORY: created spell
-
