--- a/python-pypi/mmpython/HISTORY
+++ b/python-pypi/mmpython/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up
+
 2006-11-08 Flavien Bridault <vlaaad@sourcemage.org>
 	* TRIGGERS: Removed, python upgrades are now handled in the python spell
 
@@ -44,4 +47,3 @@
 
 2002-03-13 Eric Schabell <eric@schabell.com>
 	* HISTORY: Added
-
