--- a/python-pypi/mutagen/HISTORY
+++ b/python-pypi/mutagen/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated to 1.13, cleaned up
+	* HISTORY: cleaned up
+
 2007-01-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.10
 
