mysql-python: removed useless INSTALL file: due to the new build system of section

--- a/python-pypi/mysql-python/HISTORY
+++ b/python-pypi/mysql-python/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: removed, due to the new build system of section
+
 2007-11-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added python. it is a matter of principle (c)
 
@@ -62,4 +65,3 @@
 
 2002-04-11 Julian v. Bock <julian@wongr.net>
 	* add spell.
-
