--- a/python-pypi/numpy/HISTORY
+++ b/python-pypi/numpy/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* FINAL: corrected a typo
+
 2007-11-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
@@ -83,4 +87,3 @@
 
 2002-03-23 Julian v. Bock <julian@wongr.net>
 	* add spell.
-
