--- a/python-pypi/paramiko/HISTORY
+++ b/python-pypi/paramiko/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: cleaned up, updated to 1.7
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
