--- a/python-pypi/paste/HISTORY
+++ b/python-pypi/paste/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 1.6, cleaned up
+
 2007-10-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5
 
