--- a/python-pypi/pastescript/HISTORY
+++ b/python-pypi/pastescript/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 1.6.1.1
+
 2007-09-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.6
 
