pil: use default_install

--- a/python-pypi/pil/HISTORY
+++ b/python-pypi/pil/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: use default_install_python due to the new build system of sec
+
 2007-11-08 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1
 	* DEPENDS: fixed jpeg as optional, added
@@ -86,4 +89,3 @@
 
 2002-06-12 Unet <unet@sourcemage.org>
 	* HISTORY: Created this.
-
