--- a/python-pypi/psyco/HISTORY
+++ b/python-pypi/psyco/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 1.6
+
 2006-11-21 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.5.2
 
@@ -36,4 +40,3 @@
 
 2004-02-12 Cye Stoner <acidtripp101@linuxmail.org>
 	* DEPENDS, DETAILS, HISTORY, BUILD: created this spell
-
