--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_SUB_DEPENDS: handle "all" libs choice
+
 2007-08-07 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS, SUB_DEPENDS: removed options for python dependency
 
