--- a/python-pypi/pycurl/HISTORY
+++ b/python-pypi/pycurl/HISTORY
@@ -1,3 +1,8 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS, DETAILS: cleaned up
+	* BUILD: use default_install_python
+	* INSTALL: use default_install_python
+
 2007-08-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 7.16.4
 
