--- a/python-pypi/pydns/HISTORY
+++ b/python-pypi/pydns/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: updated to 2.3.1
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -28,4 +32,3 @@
 
 2002-08-29 Treeve Jelbert <treeve@sourcemage.org>
 	* submitted
-
