--- a/python-pypi/python-irclib/HISTORY
+++ b/python-pypi/python-irclib/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: use default_build_python instead
+	* DETAILS: word wrapped
+
 2006-11-08 Flavien Bridault <vlaaad@sourcemage.org>
 	* TRIGGERS: Removed, python upgrades are now handled in the python spell
 
@@ -9,5 +13,3 @@
 
 2006-08-20 Bearcat M. Sandor <bearcat@feline-soul.com>
 	* Intial spell: DETAILS, HISTORY, TRIGGERS, DEPENDS
-
-
