python-ldap: cleaned up, adopted to the new build system of section

--- a/python-pypi/python-ldap/HISTORY
+++ b/python-pypi/python-ldap/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: cleaned up, use default_build_python
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -91,4 +94,3 @@
 2002-04-16 Sergey Lipnevich <sergey@sourcemage.org>
 	* Spell created.
 	  TODO: add "optional_depends pydns" when PyDNS is ready.
-
