pyxml: cleaned up, corrected license, url

--- a/python-pypi/pyxml/HISTORY
+++ b/python-pypi/pyxml/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: corrected license, url
+
 2006-11-08 Flavien Bridault <vlaaad@sourcemage.org>
 	* TRIGGERS: Removed, python upgrades are now handled in the python spell
 
@@ -58,4 +62,3 @@
 
 2002-03-19 Julian v. Bock <julian@wongr.net>
 	* add spell.
-
