--- a/python-pypi/roundup/HISTORY
+++ b/python-pypi/roundup/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: fixed SOURCE_URL[0], updated spell to 1.4.1
+	* DEPENDS: added opt deps: pysqlite, mysql-python, psycopg
+
 2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed BUILD_API=2.
 
