setuptools: removed useless INSTALL file

--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* INSTALL: default_install_python due to the new build system in section
+
 2007-12-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++, cleaned up
 	* INSTALL: installing the sources, not egg!
