--- a/python-pypi/tagpy/HISTORY
+++ b/python-pypi/tagpy/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: removed, default_build_python is default
+	* INSTALL: removed, default_install_python is default
+
 2007-08-07 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 0.91
 
