trac: use default_install

--- a/python-pypi/trac/INSTALL
+++ b/python-pypi/trac/INSTALL
@@ -1,4 +1,4 @@
-python setup.py install --root $INSTALL_ROOT/ &&
+default_install &&
 
 # create system-wide Trac configuration
 install_config_file "$SCRIPT_DIRECTORY/trac.ini" "/etc/trac.ini" &&
