--- a/python-pypi/turbokid/HISTORY
+++ b/python-pypi/turbokid/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: default_build_python
+	* DETAILS: cleaned up
+
 2007-12-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
