--- a/python-pypi/twisted-core/HISTORY
+++ b/python-pypi/twisted-core/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: default_build_python
+	* INSTALL: default_install_python
+
 2007-02-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.5.0
 	* BUILD, INSTALL: generalise component version
@@ -62,4 +66,3 @@
 
 2002-03-13 Eric Schabell <eric@schabell.com>
 	* Added this History file.
-
