--- a/python-pypi/xmltools/HISTORY
+++ b/python-pypi/xmltools/HISTORY
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: cleaned up
+	* DETAILS: fixed WEB_SITE
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -20,4 +24,3 @@
 
 2003-11-04 Sergey Lipnevich <sergey@sourcemage.org>
 	* ALL: spell created.
-
