lxml, pytz: new spells' Changelog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/lxml: new spell, powerful and Pythonic XML processing library
+	* python-pypi/pytz: new spell, world timezone definitions for python
+
 2008-01-13 Arjan Bouter <abouter@sourcemage.org>
 	* smgl/upstart: alternative init system
 
