--- a/libs/boost/HISTORY
+++ b/libs/boost/HISTORY
@@ -1,4 +1,5 @@
 2008-01-13 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* REPAIR^.*^PRE_SUB_DEPENDS: added to propagate the previous change quicker
 	* PRE_SUB_DEPENDS: handle "all" libs choice
 
 2007-08-07 Pol Vinogradov <vin.public@gmail.com>
