ChangeLog: removed checking of $INSTALL_ROOT in default_install_python(), the whole python-pypi section is adopted now

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/lxml: new spell, powerful and Pythonic XML processing library
 	* python-pypi/pytz: new spell, world timezone definitions for python
+	* FUNCTIONS: removed checking of $INSTALL_ROOT in default_install_python(),
+	  the whole python-pypi section is adopted now
 
 2008-01-13 Arjan Bouter <abouter@sourcemage.org>
 	* smgl/upstart: alternative init system
