tinc: new spells' Changelog entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-13 Robert Figura <stealth@sourcemage.org>
+	* net/tinc: new spell, public key based vpn daemon
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/lxml: new spell, powerful and Pythonic XML processing library
 	* python-pypi/pytz: new spell, world timezone definitions for python
