x11/x2x: new spell, keyboard and mouse on one X display to be used to control another X display

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
-2008-01-13 Robert Figura <stealth@sourcemage.org>
+2008-01-13 Robert Figura <template@sourcemage.org>
 	* net/tinc: new spell, public key based vpn daemon
+	* x11/x2x: new spell, keyboard and mouse on one X display to be used to control another X display
 
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/lxml: new spell, powerful and Pythonic XML processing library
