--- a/python-pypi/cherrypy/HISTORY
+++ b/python-pypi/cherrypy/HISTORY
@@ -1,3 +1,7 @@
+2008-01-14 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated CP_VER=3.x to 3.0.3, fixed long description wrap,
+	  renamed some vars: CP_VER => BRANCH
+
 2007-11-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: moved `SHORT='
 	* DEPENDS: added `flup' as optional to support
