--- a/gnome2-libs/gnome-keyring/HISTORY
+++ b/gnome2-libs/gnome-keyring/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.3
+
 2007-11-25 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.2
 
