--- a/gnome2-libs/metacity/HISTORY
+++ b/gnome2-libs/metacity/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.2
+
 2007-11-20 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.20.1
 
