--- a/gnome2-apps/evolution/HISTORY
+++ b/gnome2-apps/evolution/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.12.3
+
 2008-01-11 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on gnome-doc-utils
 
