gucharmap: updatde to 1.10.2

--- a/gnome2-apps/gucharmap/HISTORY
+++ b/gnome2-apps/gucharmap/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.10.2
+
 2007-09-21 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.10.1
 
