--- a/gnome2-libs/evolution-exchange/HISTORY
+++ b/gnome2-libs/evolution-exchange/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.12.3
+
 2007-11-26 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 2.12.2
 
