--- a/video/totem/HISTORY
+++ b/video/totem/HISTORY
@@ -1,3 +1,6 @@
+2008-01-13 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.3
+
 2007-10-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 2.20.1
 
