--- a/python-pypi/cherrypy/HISTORY
+++ b/python-pypi/cherrypy/HISTORY
@@ -1,5 +1,6 @@
 2008-01-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated CP_VER=3.x to 3.0.3, fixed long description wrap,
+	  updated BRANCH=2 to 2.3.0
 	  renamed some vars: CP_VER => BRANCH
 
 2007-11-19 Vlad Glagolev <stealth@sourcemage.org>
