--- a/kernels/lm_sensors/HISTORY
+++ b/kernels/lm_sensors/HISTORY
@@ -1,3 +1,6 @@
+2008-01-14 Pol Vinogradov <vin.public@gmail.com>
+	* PRE_BUILD, conf-lex.patch: added patch for config lexical analyzer
+
 2007-12-09 Ladislav Hagara <hgr@vabo.cz>
 	* PREPARE, DETAILS, DEPENDS, BUILD, INSTALL: added possibility to choose
 	  between 2 and 3 branches (DEFAULT=2) [Bug 14157]
