--- a/x11/x2x/HISTORY
+++ b/x11/x2x/HISTORY
@@ -1,2 +1,5 @@
+2008-01-14 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: Shortened SHORT
+
 2008-01-13 Robert Figura <template@sourcemage.org>
 	* DEPENDS, DETAILS, BUILD, HISTORY: created spell
