--- a/utils/ntp/HISTORY
+++ b/utils/ntp/HISTORY
@@ -1,3 +1,6 @@
+2008-01-14 Arjan Bouter <abouter@sourcemage.org>
+	* DEPENDS: added mdnsresponder
+
 2007-11-04 Julien "_kaze_" ROZO <julien@rozo.org>
 	* TRIGGERS: added, if ntp depends on openssl, then ntp is casted on openssl update
 
