--- a/disk/ide-smart/HISTORY
+++ b/disk/ide-smart/HISTORY
@@ -1,3 +1,10 @@
+2008-01-14 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: Fixed WEB_SITE, SOURCE_URL[0]
+	Note that they both now point to an archive site. An alternative for
+	WEB_SITE might be http://www.linux-ide.org/smart.html but there is
+	hardly any info there, while the archive site at least lets you get at
+	the readme.
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
