--- a/video/vobcopy/HISTORY
+++ b/video/vobcopy/HISTORY
@@ -1,3 +1,6 @@
+2008-01-14 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: updated to 1.1.0
+
 2007-06-28 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 1.0.2
 
