vobcopy: SECURITY_PATCH++

--- a/video/vobcopy/HISTORY
+++ b/video/vobcopy/HISTORY
@@ -1,5 +1,5 @@
 2008-01-14 Arwed v. Merkatz <v.merkatz@gmx.net>
-	* DETAILS: updated to 1.1.0
+	* DETAILS: updated to 1.1.0, SECURITY_PATCH++, CVE-2007-5718
 
 2007-06-28 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 1.0.2
