php-pear/suhosin: updated to 0.9.23

--- a/php-pear/suhosin/HISTORY
+++ b/php-pear/suhosin/HISTORY
@@ -1,2 +1,5 @@
+2008-01-14 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: updated to 0.9.23
+
 2007-12-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, PRE_BUILD, HISTORY: created spell
