http/xcache: depend on PHP provider, should help transitions

--- a/http/xcache/HISTORY
+++ b/http/xcache/HISTORY
@@ -1,3 +1,6 @@
+2008-01-14 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: depend on PHP provider, should help transitions
+
 2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: version updated to 1.2.2; temporary added STAGED_INSTALL=off
 	* INSTALL: install sample files only if user wants, create dir if not exists
