http/xcache -> php-pear/xcache: xcache is a php extension

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-14 Elisamuel Resto <ryuji@sourcemage.org>
+	* http/xcache -> php-pear/xcache: xcache is a php extension
+
 2008-01-13 Robert Figura <template@sourcemage.org>
 	* net/tinc: new spell, public key based vpn daemon
 	* x11/x2x: new spell, keyboard and mouse on one X display to be used to control another X display
