--- a/database/firebird/HISTORY
+++ b/database/firebird/HISTORY
@@ -1,3 +1,7 @@
+2008-01-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.1.0.17735-ReleaseCandidate1
+	* fb2.1.patch.bz2: updated
+
 2007-10-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.1.0.16780-Beta2
 	* BUILD: strip -O3 from optimisations, gcc-4.2.2 problem
