mplayer: added optional libxscrnsaver for modular xorg users

--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,7 @@
+2008-01-14 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DEPENDS: added optional depends on libxscrnsaver when using
+	  xorg-modular to stop the screensaver from popping up during playback
+
 2007-11-22 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PRE_BUILD, libavformat-api.patch: removed, they caught up with the
 	  ffmpeg changes
