ftp/filezilla: new spell, multi-platform and robust GUI ftp/sftp client

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 
 2008-01-14 Elisamuel Resto <ryuji@sourcemage.org>
 	* http/xcache -> php-pear/xcache: xcache is a php extension
+	* ftp/filezilla: new spell, multi-platform and robust GUI ftp/sftp client
 
 2008-01-13 Robert Figura <template@sourcemage.org>
 	* net/tinc: new spell, public key based vpn daemon
