memconf: Added a memory configuration listing tool

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-14 Eric Sandall <sandalle@sourcemage.org>
+	* utils/memconf: Memory configuration tool
+
 2008-01-14 Elisamuel Resto <ryuji@sourcemage.org>
 	* http/xcache -> php-pear/xcache: xcache is a php extension
 
