x11-toolkits/qt4: REPAIR^all^SUB_DEPENDS added, many annoyances fixed recently

--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,5 +1,6 @@
 2008-01-15 Elisamuel Resto <ryuji@sourcemage.org>
 	* SUB_DEPENDS: missing fi on the global case
+	* REPAIR^all^SUB_DEPENDS: added, too many annoying changes lately
 
 2008-01-11 Treeve Jelbert <treeve@sourcemage.org>
 	* SUB_DEPENDS: fix typo
