openoffice: WIP, it compiles with saying "no" to everything. Private branch

--- a/editors/openoffice/HISTORY
+++ b/editors/openoffice/HISTORY
@@ -1,3 +1,7 @@
+2007-01-15 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* Fix this history entry. The spell compiles now with
+	  saying "no" to everything
+
 2007-09-23 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 2.3.0
 	  Removed deprecated MAKE_NJOBS=1
