--- a/e/e_module-screenshot/HISTORY
+++ b/e/e_module-screenshot/HISTORY
@@ -1,3 +1,6 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: New CVS update of screenshot now depends on emprint
+
 2006-11-16 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Create config.rpath so ./autogen.sh stops complaining about
 	  missing this useless (for most packages) file
