e_module-forecasts: Added an E17 weather forecast module

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2008-01-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-plugins/ladspa: Moved to audio-libs.
 
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* e/e_module-forecasts: Added E17 module for weather forecasts
+
 2008-01-14 Eric Sandall <sandalle@sourcemage.org>
 	* utils/memconf: Memory configuration tool
 
