--- a/kde4/kgraphviewer4/HISTORY
+++ b/kde4/kgraphviewer4/HISTORY
@@ -1,3 +1,7 @@
+2008-01-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.0
+	  use kde url
+
 2007-12-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1/99.1
 	  download from project url
