--- a/kde4/kphotoalbum4/HISTORY
+++ b/kde4/kphotoalbum4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.0
+
 2007-12-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.97.0
 	* DEPENDS: kde4
