--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
 	* e/e_module-forecasts: Added E17 module for weather forecasts
+	* e/e_module-mpdule: Added an MPD module for E17
 
 2008-01-14 Eric Sandall <sandalle@sourcemage.org>
 	* utils/memconf: Memory configuration tool
