e_modules: Added alarm, forecasts, news, taskbar, mpdule, and penguins to description, removed devian, evolume and eveil from description, removed e_module-evolume as an optional dependency, and added optional dependencies on e_module-news, e_module-mpdule, and e_module-forecasts

--- a/e/e_modules/HISTORY
+++ b/e/e_modules/HISTORY
@@ -1,3 +1,11 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Added alarm, forecasts, news, taskbar, mpdule, and penguins
+	  to description
+	  Removed devian, evolume and eveil from description
+	* DEPENDS: Removed e_module-evolume
+	  Added optional dependency on e_module-news, e_module-mpdule,  and
+	  e_module-forecasts
+
 2007-11-07 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Added e_module-penguins
 
