--- a/e/e_module-penguins/HISTORY
+++ b/e/e_module-penguins/HISTORY
@@ -1,3 +1,7 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Removed, re-write to metapackage has been in five stable
+	  releases
+
 2007-11-02 Eric Sandall <sandalle@sourcemage.org>
 	* PREPARE, DETAILS, DEPENDS, PRE_BUILD: Created
 
