--- a/e/e_modules/HISTORY
+++ b/e/e_modules/HISTORY
@@ -5,6 +5,8 @@
 	* DEPENDS: Removed e_module-evolume
 	  Added optional dependency on e_module-news, e_module-mpdule,  and
 	  e_module-forecasts
+	* CONFLICTS: Removed, re-write to metapackage has been in five stable
+	  releases
 
 2007-11-07 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Added e_module-penguins
