--- a/e/e_module-evolume/HISTORY
+++ b/e/e_module-evolume/HISTORY
@@ -1,3 +1,7 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Removed, re-write to metapackage has been in five stable
+	  releases
+
 2006-12-12 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DEPENDS: depend on e_module-mixer. Doing the deprecation dance
 	* DETAILS: cleaned up all source references.
