--- a/e/e_module-news/HISTORY
+++ b/e/e_module-news/HISTORY
@@ -1,3 +1,7 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Removed, re-write to metapackage has been in five stable
+	  releases
+
 2007-06-18 Ladislav Hagara <hgr@vabo.cz>
 	* PREPARE, DETAILS, DEPENDS, PRE_BUILD: created this spell
 
