--- a/e/e_module-wlan/HISTORY
+++ b/e/e_module-wlan/HISTORY
@@ -1,3 +1,7 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* CONFLICTS: Removed, re-write to metapackage has been in five stable
+	  releases
+
 2006-11-16 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Create config.rpath so ./autogen.sh stops complaining about
 	  missing this useless (for most packages) file
