--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
 	* e/e_module-forecasts: Added E17 module for weather forecasts
 	* e/e_module-mpdule: Added an MPD module for E17
+	* e/e_module-echo: Added an E17 audio mixer module
 
 2008-01-14 Eric Sandall <sandalle@sourcemage.org>
 	* utils/memconf: Memory configuration tool
