--- a/e/e_modules/HISTORY
+++ b/e/e_modules/HISTORY
@@ -1,10 +1,10 @@
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Added alarm, forecasts, news, taskbar, mpdule, and penguins
-	  to description
+	* DETAILS: Added alarm, forecasts, news, taskbar, mpdule, echo, and
+	  penguins to description
 	  Removed devian, evolume and eveil from description
 	* DEPENDS: Removed e_module-evolume
-	  Added optional dependency on e_module-news, e_module-mpdule,  and
-	  e_module-forecasts
+	  Added optional dependency on e_module-news, e_module-mpdule,
+	  e_module-echo, and e_module-forecasts
 	* CONFLICTS: Removed, re-write to metapackage has been in five stable
 	  releases
 
