--- a/audio-libs/slv2/HISTORY
+++ b/audio-libs/slv2/HISTORY
@@ -1,2 +1,5 @@
+2008-01-16 Juuso Alasuutari <iuso@sourcemage.org>
+	* DETAILS: Updated to 0.4.4.
+
 2008-01-11 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, DEPENDS: Created spell.
