ladspa: Moved from audio-plugins to audio-libs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-16 Juuso Alasuutari <iuso@sourcemage.org>
+	* audio-plugins/ladspa: Moved to audio-libs.
+
 2008-01-14 Eric Sandall <sandalle@sourcemage.org>
 	* utils/memconf: Memory configuration tool
 
