--- a/database/pgadmin3/HISTORY
+++ b/database/pgadmin3/HISTORY
@@ -1,3 +1,6 @@
+2007-01-15 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: updated to 1.8.1
+
 2007-09-07 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: added SOURCE2_IGNORE
 	* DEPENDS: needs DEV branch of wxgtk
