mpg123: version 1.1.0 and finally a more complete spell, supporting multiple output modules.

--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,9 @@
+2008-01-16 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to version 1.1.0
+	* BUILD, CONFIGURE, DEPENDS, PRE_BUILD, mpg123-1.1.0_configure.patch:
+	  Enhance/cleanup the spell, supports proper output module selection now.
+	  Also doesn't ask for seektable anymore (that's a custom spell opt).
+
 2007-12-28 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: bump to bugfix release 1.0.1
 
@@ -92,4 +98,3 @@
 
 2002-06-12 Unet <unet@sourcemage.org>
 	* BUILD, DETAILS, HISTORY: Created this.
-
