devel/geany: added xml-parser-expat as a hard dep, fails without it

--- a/devel/geany/HISTORY
+++ b/devel/geany/HISTORY
@@ -1,3 +1,6 @@
+2008-01-15 Elisamuel Resto <ryuji@sourcemage.org>
+	* DEPENDS: added xml-parser-expat as a hard dep, fails without it
+
 2007-10-13 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.12
 
