--- a/python-pypi/bzr/HISTORY
+++ b/python-pypi/bzr/HISTORY
@@ -1,3 +1,6 @@
+2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.1
+
 2007-12-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0,
 	  fixed WEB_SITE
