sonata: => 1.4 + clean up

--- a/audio-players/sonata/HISTORY
+++ b/audio-players/sonata/HISTORY
@@ -1,3 +1,10 @@
+2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4
+	* PRE_BUILD: removed, useless, upstream fixed it
+	* DEPENDS: removed mpd as a dep, the spell is for it,
+	  but it doesn't need mpd really
+	* BUILD, INSTALL: removed, due to the moving to python-pypi section
+
 2007-12-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++, cleaned up
 	* DEPENDS: cleaned up
