sonata: moved to python-pypi section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
+	* audio-players/sonata: moved to python-pypi section
+
 2008-01-16 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-plugins/ladspa: Moved to audio-libs.
 
