--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,8 @@
+2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: added pygtk2 as an opt dep (for gtools support)
+	* PRE_BUILD: copying of gtools.py
+	* INSTALL: removed is_depends_enabled function include
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: cleaned up
 	* INSTALL: use default_install_python function due to the new
