ide-smart: DETAILS: corrected SOURCE_URL to reference SOURCE

--- a/disk/ide-smart/HISTORY
+++ b/disk/ide-smart/HISTORY
@@ -1,3 +1,6 @@
+2008-01-16 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
+	* DETAILS: Fixed SOURCE_URL[0] to use $SOURCE
+
 2008-01-14 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
 	* DETAILS: Fixed WEB_SITE, SOURCE_URL[0]
 	Note that they both now point to an archive site. An alternative for
