mercurial: gtools => upstream

--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,7 +1,8 @@
 2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
-	* DEPENDS: added pygtk2 as an opt dep (for gtools support)
+	* DEPENDS: added pygtk2 as a req dep (for gtools support)
 	* PRE_BUILD: copying of gtools.py
 	* INSTALL: removed is_depends_enabled function include
+	* PREPARE: ask user about gtools
 
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: cleaned up
