utils/qutescoop: added support for teamspeak

--- a/utils/qutescoop/HISTORY
+++ b/utils/qutescoop/HISTORY
@@ -1,3 +1,8 @@
+2008-01-16 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* PRE_BUILD, DEPENDS, teamspeak.patch: added a suggest_depends
+	  on teamspeak, applied a small patch that fixes the name of the
+	  teamspeak executable being called.
+
 2008-01-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD, DEPENDS, desktop, DETAILS, HISTORY, PRE_BUILD, INSTALL: spell created
 
