--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-01-16 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: updated latest to patch-2.6.24-rc8
+	* info/patches/PRE_2_6/patch-2.6.24-rc8: added
+
 2008-01-15 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: updated latest to patch-2.6.23.14
 	* info/patches/maintenance_patches/patch-2.6.23.14: added
