qt4pas-V1.60_Qt4.3.1

--- a/devel/qt4pas/HISTORY
+++ b/devel/qt4pas/HISTORY
@@ -1,3 +1,6 @@
+2008-01-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version V1.60_Qt4.3.1
+
 2008-01-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version V1.57_Qt4.3.1
 
