--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,6 @@
+2008-01-16 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.7
+
 2007-12-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.6
 
