kvm: Updated to 59

--- a/kernels/kvm/HISTORY
+++ b/kernels/kvm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-15 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 59
+
 2007-12-19 David Brown <dmlb2000@gmail.com>
 	* DETAILS: updated to 57
 
