--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-16 Elisamuel Resto <ryuji@sourcemage.org>
+	* wm-addons/avant-window-navigator: new spell, customizable dock for composited desktops
+
 2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
 	* audio-players/sonata: moved to python-pypi section
 
