--- a/devel/pkgconfig/HISTORY
+++ b/devel/pkgconfig/HISTORY
@@ -1,3 +1,6 @@
+2008-01-17 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: Version 0.23
+
 2007-11-05 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Added, optionally depend on glib2 for system GLib.
 
