--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,6 @@
+2008-01-17 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.4.11
+
 2007-12-29 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Removed patch.  Added new webkit.c file.
 	* webkit.c: Added.  Better then patching with all the changes.
