--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-17 Remko van der Vossen <wich@sourcemage.org>
+	* utils/sl: moved from games, joke to annoy those who misspell ls
+
 2008-01-16 Elisamuel Resto <ryuji@sourcemage.org>
 	* wm-addons/avant-window-navigator: new spell, customizable dock for composited desktops
 	* wm-addons/avant-window-navigator-extras: new spell, extras for avant-window-navigator
