pyalsaaudio: new spell, ALSA wrapper for python

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-17 Vlad Glagolev <stealth@sourcemage.org>
+	* python-pypi/pyalsaaudio: new spell, ALSA wrapper for python
+
 2008-01-17 Remko van der Vossen <wich@sourcemage.org>
 	* utils/sl: moved from games, joke to annoy those who misspell ls
 
