--- a/editors/openoffice/INSTALL
+++ b/editors/openoffice/INSTALL
@@ -1,5 +1,4 @@
-cp -r $SOURCE_DIRECTORY/instsetoo_native/unxlngx6.pro/OpenOffice/native/install/en-US/linux-2.6-x86_64/buildroot/opt/openoffice.org2.3 /opt/openoffice  &&
-
+  ./install --prefix=/opt	                                                    &&
   for APP in swriter scalc sdraw simpress smath soffice
   do rm -f /usr/bin/$APP                                &&
      ln -sf $TRACK_ROOT/opt/openoffice/program/$APP /usr/bin/$APP
