--- a/video/kaffeine/HISTORY
+++ b/video/kaffeine/HISTORY
@@ -1,3 +1,6 @@
+2008-01-17 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: added cdparanoia #14226
+
 2007-07-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.8.5
 
