libviper: new spell, support lib for vwm

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-01-17 Arjan Bouter <abouter@sourcemage.org>
 	* libs/libpseudo: new spell, support lib for vwm
+	* libs/libviper: new spell, support lib for vwm
 
 2008-01-17 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/pyalsaaudio: new spell, ALSA wrapper for python
