--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-01-17 Arjan Bouter <abouter@sourcemage.org>
 	* libs/libpseudo: new spell, support lib for vwm
 	* libs/libviper: new spell, support lib for vwm
+	* windowmanagers/vwm: new spell, text mode windowmanager
 
 2008-01-17 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/pyalsaaudio: new spell, ALSA wrapper for python
