--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,7 @@
+2008-01-17 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DEPENDS: brought back --disable-xss, moved the whole dependency to
+	  mplayer svn
+
 2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: fixed libxscrnsaver unknown flag -- fixed the bug:
 	  `Unknown parameter: --disable-xss' during config stage
