python: added some additional opts (ipv6+threading), removed the dirty hacks, following OpenBSDish way since now

--- a/devel/python/INSTALL
+++ b/devel/python/INSTALL
@@ -1,11 +1,4 @@
-persistent_add PYPATH &&
-local PYPATH=$INSTALL_ROOT/usr/lib/python${VERSION:0:3}
-
-if [[ -d $PYPATH/site-packages ]]; then
-  mv $PYPATH/site-packages $SOURCE_DIRECTORY
-fi &&
-
-default_install &&
+cp -av $SOURCE_DIRECTORY/anywhere/usr $INSTALL_ROOT/ &&
 
 if [[ -f $SOURCE_DIRECTORY/spell-tmp/pydcop.py ]]; then
   mv $SOURCE_DIRECTORY/spell-tmp/pydcop.py $PYPATH
@@ -13,4 +6,4 @@ fi &&
 
 # gettext
 install -m 755 $SOURCE_DIRECTORY/Tools/i18n/{pygettext.py,msgfmt.py} \
-  "$INSTALL_ROOT/usr/bin"
+  $INSTALL_ROOT/usr/bin
