--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,8 @@
+2008-01-17 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: added some options: ipv6 and threading support
+	* INSTALL: copy the stuff from fake dir, removed dirty hacks
+	* FINAL: removed, removed dirty hacks
+
 2008-01-07 Vlad Glagolev <stealth@sourcemage.org>
 	* FINAL: mv => cp, better verbose + some info
 	* BUILD: cleaned up
