--- a/e/e_dbus/HISTORY
+++ b/e/e_dbus/HISTORY
@@ -1,3 +1,6 @@
+2008-01-17 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends one vas
+
 2007-10-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: SOURCE_URL's fix, e17/proto -> e17/libs
 	* PRE_BUILD: sources from old SOURCE_URL must be removed
