--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,9 @@
 2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
 	* editors/translator: new spell, gettext (.po) files editor
 
+2008-01-17 Eric Sandall <sandalle@sourcemage.org>
+	* e/e_module-notification: Added libnotify module for E17
+
 2008-01-17 Arjan Bouter <abouter@sourcemage.org>
 	* libs/libpseudo: new spell, support lib for vwm
 	* libs/libviper: new spell, support lib for vwm
