--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
+	* editors/translator: new spell, gettext (.po) files editor
+
 2008-01-17 Arjan Bouter <abouter@sourcemage.org>
 	* libs/libpseudo: new spell, support lib for vwm
 	* libs/libviper: new spell, support lib for vwm
