--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,6 @@
+2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD, CONFIGURE: ipv6 and threads => configurable
+
 2008-01-17 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: added some options: ipv6 and threading support
 	* INSTALL: copy the stuff from fake dir, removed dirty hacks
