--- a/gnome2-libs/evolution-data-server/HISTORY
+++ b/gnome2-libs/evolution-data-server/HISTORY
@@ -1,3 +1,6 @@
+2008-01-17 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on gtk-doc
+
 2008-01-13 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.12.3
 
