--- a/disk/lvm/HISTORY
+++ b/disk/lvm/HISTORY
@@ -1,3 +1,7 @@
+2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.02.30
+	* BUILD: cleaned up
+
 2007-12-06 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.02.29
 
