--- a/shell-term-fm/busybox/HISTORY
+++ b/shell-term-fm/busybox/HISTORY
@@ -1,3 +1,8 @@
+2008-01-17 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 1.8.2
+	* applets.patch: added to remove warning
+	* busybox.config: recreated based on previous config
+
 2007-04-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.2
 	* BUILD: remove sedits
