utils/quemu: updated to 0.9.1, fixed building process

--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,7 @@
+2008-01-19 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 0.9.1
+	* BUILD: fixed configure's options
+
 2007-04-11 Elisamuel Resto <ryuji@mages.ath.cx>
 	* BUILD: prescott arch was added recently, wasn't getting filtered. Related to bug 13596
 
