--- a/http/apache22/HISTORY
+++ b/http/apache22/HISTORY
@@ -1,3 +1,7 @@
+2008-01-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.8, SECURITY_PATCH=3
+	  http://httpd.apache.org/security/vulnerabilities_22.html
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Use upstream apache.gpg key and signatures
 
