--- a/http/apache2/HISTORY
+++ b/http/apache2/HISTORY
@@ -1,3 +1,7 @@
+2008-01-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.63, SECURITY_PATCH=3
+	  http://httpd.apache.org/security/vulnerabilities_20.html
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Use upstream apache.gpg
 	  Cleaned up extra spaces in long description
