--- a/http/apache/HISTORY
+++ b/http/apache/HISTORY
@@ -1,3 +1,7 @@
+2008-01-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.3.41, SECURITY_PATCH=3
+	  http://httpd.apache.org/security/vulnerabilities_13.html
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Use upstream apache.gpg
 
