--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.2.1
+
 2007-12-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS, PREPARE: added support for new stable 2.2 branch (2.2.0)
 
