kde4-apps: new section

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,9 @@
 	* e/e_module-mpdule: Added an MPD module for E17
 	* e/e_module-echo: Added an E17 audio mixer module
 
+2008-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/*: new section
+
 2008-01-14 Eric Sandall <sandalle@sourcemage.org>
 	* utils/memconf: Memory configuration tool
 
