--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/dragonplayer: spell moved from kde4
+
 2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
 	* editors/translator: new spell, gettext (.po) files editor
 
