move kphotoalbum4 to kde4-apps section

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
+	* kde4-apps/kphotoalbum4: spell moved from kde4
+
+2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4-apps/kmldonkey4: spell moved from kde4
 
 2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
