--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-19 Alexander Tsamutali <astsmtl@gmail.com>
+	* ftp/wxdfast: new spell, an open source download manager
+
 2008-01-18 Vlad Glagolev <stealth@sourcemage.org>
 	* editors/translator: new spell, gettext (.po) files editor
 
