--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
+	* python-pypi/reportlab: spell moved from doc
+
+2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
 	* kde4-apps/koffice2: spell moved from kde4
 
 2008-01-19  Treeve Jelbert <treeve@sourcemage.org>
