reportlab - use defaults for build/install

--- a/python-pypi/reportlab/HISTORY
+++ b/python-pypi/reportlab/HISTORY
@@ -1,3 +1,7 @@
+2008-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* INSTALL: use default_install
+	* BUILD: use default_build
+
 2007-06-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2_1
 
