--- a/python-pypi/reportlab/INSTALL
+++ b/python-pypi/reportlab/INSTALL
@@ -1,4 +1,4 @@
-python  setup.py  install  --root $INSTALL_ROOT/ &&
+default_install            &&
 cd  docs                   &&
 python  genAll.py          &&
 cd  ..				
