--- a/python-pypi/turbogears/HISTORY
+++ b/python-pypi/turbogears/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.4b6
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD: default_build_python is default
 
