--- a/devel/nasm/HISTORY
+++ b/devel/nasm/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.01
+
 2007-12-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.00, removed UPDATED
 
