--- a/python-pypi/paramiko/HISTORY
+++ b/python-pypi/paramiko/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Elisamuel Resto <ryuji@sourcemage.org>
+	* DETAILS: added backup SOURCE_URL
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: cleaned up
 	* DETAILS: cleaned up, updated to 1.7
