--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,7 @@
+2008-01-19 Philippe "Puppet_Master" Caseiro <puppetmaster@sourcemage.org>
+	* DETAILS: vestion update to 0.5.8.1
+	* DEPENDS: force_depends boost (have to be the last version)
+
 2008-01-13 Elisamuel Resto <ryuji@sourcemage.org>
 	* DEPENDS: added dependency on librsvg2 (Bug #14216)
 
