audacious: updated to 1.4.5

--- a/audio-players/audacious/HISTORY
+++ b/audio-players/audacious/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.4.5
+
 2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* HISTORY: fixed history entry from 08-30 (I have a time machine?)
 	* DEPENDS: added libmowgli, changed mcs to libmcs, changed glade2 to libglade2
