--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.13.1, new WEB_SITE
+
 2007-11-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated version to 2.13.0.1
 
