--- a/audio-plugins/audacious-plugins/HISTORY
+++ b/audio-plugins/audacious-plugins/HISTORY
@@ -1,3 +1,6 @@
+2008-01-19 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 1.4.4
+
 2007-12-24 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated to 1.4.2, updated SOURCE_URL
 
