--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,7 @@
+2008-01-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS, PRE_BUILD: promoted 2.13.1 to stable
+	* *.patch: removed
+
 2008-01-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.13.1, new WEB_SITE
 
