--- a/libs/stlport/HISTORY
+++ b/libs/stlport/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 5.1.5
+
 2007-12-06 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.1.4
 
