--- a/libs/aqbanking/HISTORY
+++ b/libs/aqbanking/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 George Sherwood <george@beernabeer.com>
+	* CONFLICTS: Added.  conflicts aqbanking2
+
 2006-07-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.2.0
 
