--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-20 George Sherwood <george@beernabeer.com>
+	* libs/aqbanking2: Added new spell
+	* libs/gwenhywfar2: Added new spell
+
 2008-01-19 Alexander Tsamutali <astsmtl@gmail.com>
 	* ftp/wxdfast: new spell, an open source download manager
 
