--- a/libs/gwenhywfar/HISTORY
+++ b/libs/gwenhywfar/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 George Sherwood <george@beernabeer.com>
+	* CONFLICTS: Added. conflicts gwenhywfar2
+
 2007-11-27 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: added libgcrypt and gnutls [Bug 14132]
 
