--- a/gnome2-apps/gnucash/HISTORY
+++ b/gnome2-apps/gnucash/HISTORY
@@ -1,3 +1,7 @@
+2008-01-20 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 2.2.3
+	* DEPENDS: optional_depends aqbanking2
+
 2007-12-19 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.2.2
 
