--- a/utils/which/HISTORY
+++ b/utils/which/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.19
+
 2007-10-30 Elisamuel Resto <ryuji@mages.ath.cx>
 	* DETAILS" version bump 2.16 -> 2.18
 
