--- a/x11-toolkits/sptk/HISTORY
+++ b/x11-toolkits/sptk/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.5.7-r1
+
 2007-11-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.5.6
 
