--- a/science/rkward/HISTORY
+++ b/science/rkward/HISTORY
@@ -1,2 +1,5 @@
+2008-01-20 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 0.4.9
+
 2007-01-29 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS, DEPENDS, HISTORY: created spell
