--- a/gnome2-libs/gnome-speech/HISTORY
+++ b/gnome2-libs/gnome-speech/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 0.4.18
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 0.4.17
 
