--- a/gnome2-libs/librsvg2/HISTORY
+++ b/gnome2-libs/librsvg2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Robin Cook <rcook@wyrms.net>
+	* DETAILS: updated VERSION to 2.20.0
+
 2008-01-02 Pol Vinogradov <vin.public@gmail.com>
 	* BUILD: replaced iceweasel to icecat
 
