removed gnofin, deprecation complete

--- a/gnome2-apps/gnucash/HISTORY
+++ b/gnome2-apps/gnucash/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* CONFLICTS: removed gnofin, it's gone
+
 2008-01-20 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.2.3
 	* DEPENDS: optional_depends aqbanking2
