--- a/fonts/dejavu-ttf/HISTORY
+++ b/fonts/dejavu-ttf/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.23
+
 2007-12-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.22
 	* INSTALL: change from directory
