vnstat: Updating hashsum, yes it's okay

--- a/net/vnstat/HISTORY
+++ b/net/vnstat/HISTORY
@@ -1,3 +1,6 @@
+2008-01-20 David Kowis <dkowis@shlrm.org>
+	* DETAILS: updated hashsum
+
 2008-01-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6
 
