net/iptables: made grsec patch optional

--- a/net/iptables/HISTORY
+++ b/net/iptables/HISTORY
@@ -1,3 +1,8 @@
+2008-01-21 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: made grsec patch optional
+	* CONFIGURE: moved to PREPARE
+	* PREPARE: readded
+
 2008-01-05 Elisamuel Resto <ryuji@sourcemage.org>
 	* INSTALL: added install-devel and copying of headers
 	* BUILD: added $TRACK_ROOT to the make call
