jackmidi_alsaseq: Deprecated because JACK now has native ALSA Sequencer support.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-22 Juuso Alasuutari <iuso@sourcemage.org>
+	* audio-drivers/jackmidi_alsaseq: Deprecated because JACK now has
+	  native ALSA Sequencer support.
+
 2008-01-21 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/elementsoap: new spell, light-weight SOAP implementation
 
