jack: Added conflict with deprecated jackmidi_alsaseq.

--- a/audio-drivers/jack/HISTORY
+++ b/audio-drivers/jack/HISTORY
@@ -6,6 +6,7 @@
 	* PRE_SUB_DEPENDS, SUB_DEPENDS, CONFIGURE, PRE_BUILD: Removed
 	  TIMEPATCH sub-dependency, the feature is now included upstream.
 	* jack_time.patch: Deleted.
+	* CONFLICTS: Conflicts with deprecated jackmidi_alsaseq.
 
 2007-12-04 Thomas Orgis <sobukus@sourcemage.org>
 	* PRE_BUILD: no lib64!
