net-tools: fixed a weird bug in network init.d script -- [DEVICE] was useless, when you try `telinit run network restart wlan0' -- before it would restart all network devices you have in /etc/sysconfig/network, now -- it just works properly :)

--- a/net/net-tools/HISTORY
+++ b/net/net-tools/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Vlad Glagolev <stealth@sourcemage.org>
+	* init.d/network: fixed a weird bug ([DEVICE] was useless, now it works)
+
 2007-09-05 David Brown <dmlb2000@gmail.com>
 	* DETAILS: patchlevel++
 
