x11-toolkits/wxruby: a GUI toolkit for Ruby #14194 (by linuxfan)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* x11-toolkits/wxruby: a GUI toolkit for Ruby #14194 (by linuxfan)
+
 2008-01-22 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-drivers/jackmidi_alsaseq: Deprecated because JACK now has
 	  native ALSA Sequencer support.
