image_size: added, fixes bug14081

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/image_size: new spell, ruby_image size module
+
 2008-01-22 Juuso Alasuutari <iuso@sourcemage.org>
 	* audio-drivers/jackmidi_alsaseq: Deprecated because JACK now has
 	  native ALSA Sequencer support.
