wxruby: moved from x11-toolkits to ruby-raa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2008-01-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/image_size: new spell, ruby_image size module
+	* x11-toolkits/wxruby: moved to ruby-raa
+	* ruby-raa/wxruby: moved from x11-toolkits
 
 2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* x11-toolkits/wxruby: a GUI toolkit for Ruby #14194 (by linuxfan)
