qt4: added repair file for PRE_SUB_DEPENDS

--- a/x11-toolkits/qt4/HISTORY
+++ b/x11-toolkits/qt4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-23 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* REPAIR^all^PRE_SUB_DEPENDS: this is the repair file that matters
+
 2008-01-15 Elisamuel Resto <ryuji@sourcemage.org>
 	* SUB_DEPENDS: missing fi on the global case
 	* REPAIR^all^SUB_DEPENDS: added, too many annoying changes lately
