coreutils 6.10, su is provided by shadow now [Bug 14247] works for me ...

--- a/utils/coreutils/HISTORY
+++ b/utils/coreutils/HISTORY
@@ -1,3 +1,8 @@
+2008-01-23 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 6.10, su and hostname are no longer nstalled by default
+	* PRE_BUILD, *patch: removed
+	* pam.d/su: removed, su is provided by shadow now [Bug 14247]
+
 2007-10-31 David Brown <dmlb2000@gmail.com>
 	* PRE_BUILD: check for 2.7 as well as 2.6 glibc
 
