enna: Added an EFL media center

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-01-23 Eric Sandall <sandalle@sourcemage.org>
 	* e/e_module-execwatch: Added E17 module for monitoring program exit status
+	* e/enna: Added an EFL media center
 
 2008-01-23 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/image_size: new spell, ruby_image size module
