vrms: Added a utility from Debian to list non-free packages WIP: Needs to be modified to work with SMGL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-23 Eric Sandall <sandalle@sourcemage.org>
+	* utils/vrms: Utility to list non-free packages
+
 2007-03-15 Eric Sandall <sandalle@sourcemage.org>
 	* audio-soft/alsamixergui: ALSA mixer GUI based on FLTK
 
