rawstudio: Added new spell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-24 George Sherwood <george@beernabeer.com>
+	* graphics/rawstudio: Added new spell
+
 2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
 	* shell-term-fm/vifm: new spell, ncurses based file manager with vi
 	  like keybindings
