--- a/printer/glabels/HISTORY
+++ b/printer/glabels/HISTORY
@@ -1,3 +1,6 @@
+2008-01-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.2.1
+
 2007-12-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.2.0
 
