gnumeric: => 1.8.1, removed DEVEL

--- a/gnome2-apps/gnumeric/HISTORY
+++ b/gnome2-apps/gnumeric/HISTORY
@@ -1,3 +1,6 @@
+2008-01-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.8.1
+
 2007-12-29 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 1.8.0
 	  removed 1.6 items
