findutils: => 4.2.32, marked key as VERIFIED_UPSTREAM_KEY

--- a/utils/findutils/HISTORY
+++ b/utils/findutils/HISTORY
@@ -1,3 +1,6 @@
+2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.2.32, marked key as VERIFIED_UPSTREAM_KEY
+
 2007-06-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.2.31, SECURITY_PATCH=1, CVE-2007-2452
 
