ndesk-dbus-glib: New spell required by beagle

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-26 George Sherwood <george@beernabeer.com>
+	* util/ndesk-dbus: new spell, required for beagle
+	* util/ndeks-dbus-glib: new spell, required for beagle
+
 2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
         * lua-forge/luaposix: new spell, POSIX library for Lua
 	* lua-forge/lua-imlib2: new spell, binding to the imlib2 image library
