beagle: Updated to version 0.3.2. Now depends ndesk-dbus-glib

--- a/utils/beagle/HISTORY
+++ b/utils/beagle/HISTORY
@@ -1,3 +1,9 @@
+2008-01-26 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.3.2
+	* DEPENDS: depends ndesk-dbus-glib
+	* PRE_BUILD: Removed
+	* mono-1.2.6.patch: Removed. Incorporated upstream.
+
 2007-12-23 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Added to apply patch
 	* mono-1.2.6.patch: Added upstream patch to build with mono 1.2.6
