webkitgtk: => r29801, made SVG support configurable

--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,4 +1,9 @@
 2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
+        * DETAILS: updated spell to r29801
+	* CONFIGURE: made SVG support configurable
+	* PRE_BUILD: => BUILD
+
+2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to r29753
 
 2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
