--- a/ham/xconvers/HISTORY
+++ b/ham/xconvers/HISTORY
@@ -1,4 +1,6 @@
 2008-01-27 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS, BUILD: converted to build api2
+	* BUILD: removed
 	* DETAILS: updated spell to 0.8.3, fixes #12102
 	  fixed WEB_SITE
 
