kwave: new spell, a sound editor for KDE

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-27 Julien "_kaze_" ROZO <julien@rozo.org>
+	* kde-apps/kwave: new spell, a sound editor for KDE
+
 2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
         * lua-forge/lrexlib: new spell, Lua binding of POSIX and PCRE
 	  regular expression libraries
