lzlib: new spell, library to access zlib library functions

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-28 Vlad Glagolev <stealth@sourcemage.org>
+	* lua-forge/lzlib: new spell, library to access zlib library functions
+
 2008-01-27 Ismael Luceno <ismael@sourcemage.org>
 	* kernels/linux-uvc: new spell, USB Video Class driver
 
@@ -5,7 +8,7 @@
 	* kde-apps/kwave: new spell, a sound editor for KDE
 
 2008-01-27 Vlad Glagolev <stealth@sourcemage.org>
-        * lua-forge/lrexlib: new spell, Lua binding of POSIX and PCRE
+	* lua-forge/lrexlib: new spell, Lua binding of POSIX and PCRE
 	  regular expression libraries
 
 2008-01-26 George Sherwood <george@beernabeer.com>
