libmp3splt: removed is_depends_enabled.function references

--- a/audio-libs/libmp3splt/HISTORY
+++ b/audio-libs/libmp3splt/HISTORY
@@ -1,2 +1,5 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-10-18 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS, DEPENDS, HISTORY: created spell
