xmms2: removed is_depends_enabled.function references

--- a/audio-players/xmms2/HISTORY
+++ b/audio-players/xmms2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2007-11-19 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* BUILD: gah stupid me forgot to append $OPTS
 	* PRE_BUILD: trick sorcery into providing configure --help option
