gnupg: removed is_depends_enabled.function references

--- a/crypto/gnupg/HISTORY
+++ b/crypto/gnupg/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* TRIGGERS: removed is_depends_enabled.function reference
+
 2008-01-11 Vlad Glagolev <stealth@sourcemage.org>
 	* PREPARE: removed, it's useless really (for the last 3 years)
 	* DETAILS: removed GNUPG_DEVEL, -^, fixed url, removed useless quotes
