git: removed is_depends_enabled.function references

--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DEPENDS: removed is_depends_enabled.function reference
+
 2008-01-27 Ismael Luceno <ismael@sourcemage.org>
 	* CONFIGURE, DEPENDS: git-svn depends on term-readkey
 
