apr-util0: removed is_depends_enabled.function references

--- a/libs/apr-util0/HISTORY
+++ b/libs/apr-util0/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* TRIGGERS: removed is_depends_enabled.function reference
+
 2007-11-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.9.15
 	  Use upstream apache.gpg key and signatures
