wpa_supplicant: removed is_depends_enabled.function references

--- a/net/wpa_supplicant/HISTORY
+++ b/net/wpa_supplicant/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD: removed is_depends_enabled.function reference
+
 2007-09-18 Eric Sandall <sandalle@sourcemage.org>
 	* init.d/wpa_supplicant: Also except off/any ESSID as non-associated
 
