dzen2: added missing parameter to the is_depends_enabled call

--- a/wm-addons/dzen2/HISTORY
+++ b/wm-addons/dzen2/HISTORY
@@ -1,4 +1,7 @@
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* PRE_BUILD: added missing parameter to the is_depends_enabled call
+
+2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: removed is_depends_enabled.function reference
 
 2007-08-18 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
