vtk: update to 5.0.4

--- a/science-libs/vtk/HISTORY
+++ b/science-libs/vtk/HISTORY
@@ -1,3 +1,6 @@
+2008-01-28 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	*	DETAILS: update to 5.0.4
+
 2008-01-19 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 5.0.3
 	*	INSTALL: removed because linking doesn't work (and not needed
