evas: Optionally depends on glitz and sdl 	  glew support is also currently broken 	  Added gif, tiff, and svg (via cairo) image loader optional dependencies 	  edb optional depends said it was for PNG, not EDB, image loader 	  Cairo X11 rendering is still unsupported

--- a/e/evas/HISTORY
+++ b/e/evas/HISTORY
@@ -1,3 +1,9 @@
+2008-01-28 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on glitz and sdl
+	  glew support is also currently broken
+	  Added gif, tiff, and svg (via cairo) image loader optional dependencies
+	  edb optional depends said it was for PNG, not EDB, image loader
+
 2007-08-09 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Added optional dependency on glew
 
