gimp: => 2.4.4, fixed gtkhtml disable flag, cleaned up, removed DEVEL

--- a/graphics/gimp/HISTORY
+++ b/graphics/gimp/HISTORY
@@ -1,3 +1,8 @@
+2008-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.4, removed DEVEL (not confusing
+          the users with devel/non-stable branch question)
+	* DEPENDS: fixed gtkhtml disable flag, cleaned up
+
 2007-12-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.4.3
 
@@ -258,4 +263,3 @@
 
 2002-06-12 Unet <unet@sourcemage.org>
 	* Created this.
-
