moc: updated DEV=y to 2.5.0-alpha2

--- a/audio-players/moc/HISTORY
+++ b/audio-players/moc/HISTORY
@@ -1,4 +1,7 @@
 2008-01-30 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: Fixed SOURCE{,2}_URL[0]
+	  updated DEV=y to 2.5.0-alpha2
+	  marked key as upstream and reordered a bit
 	* DEPENDS: added ncurses for ordering
 	* BUILD: applied a modified patch from the epilogue of #10376
 
