ruby-raa/abstract: new spell, a library which enable you to define abstract method in Ruby.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/abstract: new spell, a library which enable you to define abstract method in Ruby.
+
 2008-01-26 George Sherwood <george@beernabeer.com>
 	* util/ndesk-dbus: new spell, required for beagle
 	* util/ndeks-dbus-glib: new spell, required for beagle
