ruby-raa/atom-tools: new spell, Tools for manipulating Atom feeds, entries and collections

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/atom-tools: new spell, Tools for manipulating Atom feeds, entries and collections
 	* ruby-raa/aes-rb: new spell, An all-C implementation of the AES encryption algorithm for Ruby
 	* ruby-raa/abstract: new spell, a library which enable you to define abstract method in Ruby.
 
